--- a/shared/src/Annium.Components.State.Operations/Annium.Components.State.Operations.csproj
+++ b/shared/src/Annium.Components.State.Operations/Annium.Components.State.Operations.csproj
@@ -3,6 +3,7 @@
         <PackageId>Annium.Components.State.Operations</PackageId>
         <PackageVersion>0.1.0</PackageVersion>
         <Description>Annium.Components.State.Operations</Description>
+        <Solutions>Annium.Frontend</Solutions>
         <TargetFramework>net8.0</TargetFramework>
         <OutputType>Library</OutputType>
         <DebugType>portable</DebugType>
