--- a/web/demo/Demo.Blazor.Ant/Demo.Blazor.Ant.csproj
+++ b/web/demo/Demo.Blazor.Ant/Demo.Blazor.Ant.csproj
@@ -3,6 +3,7 @@
         <PackageId>Demo.Blazor.Ant</PackageId>
         <PackageVersion>0.1.0</PackageVersion>
         <Description>Demo.Blazor.Ant</Description>
+        <Solutions>Annium.Frontend</Solutions>
         <TargetFramework>net8.0</TargetFramework>
         <OutputType>Exe</OutputType>
         <DebugType>portable</DebugType>
