--- a/web/demo/Demo.Blazor.Charts/Demo.Blazor.Charts.csproj
+++ b/web/demo/Demo.Blazor.Charts/Demo.Blazor.Charts.csproj
@@ -3,6 +3,7 @@
         <PackageId>Demo.Blazor.Charts</PackageId>
         <PackageVersion>0.1.0</PackageVersion>
         <Description>Demo.Blazor.Charts</Description>
+        <Solutions>Annium.Frontend</Solutions>
         <TargetFramework>net8.0</TargetFramework>
         <OutputType>Exe</OutputType>
         <DebugType>portable</DebugType>
