--- a/web/src/Annium.Blazor.Charts/Annium.Blazor.Charts.csproj
+++ b/web/src/Annium.Blazor.Charts/Annium.Blazor.Charts.csproj
@@ -3,6 +3,7 @@
         <PackageId>Annium.Blazor.Charts</PackageId>
         <PackageVersion>0.1.0</PackageVersion>
         <Description>Annium.Blazor.Charts</Description>
+        <Solutions>Annium.Frontend</Solutions>
         <TargetFramework>net8.0</TargetFramework>
         <OutputType>Library</OutputType>
         <DebugType>portable</DebugType>
