--- a/web/test/Annium.Blazor.Charts.Tests/Annium.Blazor.Charts.Tests.csproj
+++ b/web/test/Annium.Blazor.Charts.Tests/Annium.Blazor.Charts.Tests.csproj
@@ -3,6 +3,7 @@
         <PackageId>Annium.Blazor.Charts.Tests</PackageId>
         <PackageVersion>0.1.0</PackageVersion>
         <Description>Annium.Blazor.Charts.Tests</Description>
+        <Solutions>Annium.Frontend</Solutions>
         <TargetFramework>net8.0</TargetFramework>
         <OutputType>Library</OutputType>
         <DebugType>portable</DebugType>
