--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -3,24 +3,24 @@
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
   </PropertyGroup>
   <ItemGroup>
-    <PackageVersion Include="Annium" Version="1.1.4" />
-    <PackageVersion Include="Annium.Configuration.Abstractions" Version="1.1.4" />
-    <PackageVersion Include="Annium.Core.DependencyInjection" Version="1.1.4" />
-    <PackageVersion Include="Annium.Core.Runtime" Version="1.1.4" />
-    <PackageVersion Include="Annium.Data.Models" Version="1.1.4" />
-    <PackageVersion Include="Annium.Data.Operations" Version="1.1.4" />
-    <PackageVersion Include="Annium.Data.Operations.Serialization.Json" Version="1.1.4" />
-    <PackageVersion Include="Annium.Extensions.Jobs" Version="1.1.4" />
-    <PackageVersion Include="Annium.Extensions.Validation" Version="1.1.4" />
-    <PackageVersion Include="Annium.Localization.InMemory" Version="1.1.4" />
-    <PackageVersion Include="Annium.Logging.Console" Version="1.1.4" />
-    <PackageVersion Include="Annium.Logging.Microsoft" Version="1.1.4" />
-    <PackageVersion Include="Annium.Net.Base" Version="1.1.4" />
-    <PackageVersion Include="Annium.Net.Http" Version="1.1.4" />
-    <PackageVersion Include="Annium.NodaTime.Serialization.Json" Version="1.1.4" />
-    <PackageVersion Include="Annium.Serialization.Abstractions" Version="1.1.4" />
-    <PackageVersion Include="Annium.Serialization.Json" Version="1.1.4" />
-    <PackageVersion Include="Annium.Testing" Version="1.1.4" />
+    <PackageVersion Include="Annium" Version="1.1.5" />
+    <PackageVersion Include="Annium.Configuration.Abstractions" Version="1.1.5" />
+    <PackageVersion Include="Annium.Core.DependencyInjection" Version="1.1.5" />
+    <PackageVersion Include="Annium.Core.Runtime" Version="1.1.5" />
+    <PackageVersion Include="Annium.Data.Models" Version="1.1.5" />
+    <PackageVersion Include="Annium.Data.Operations" Version="1.1.5" />
+    <PackageVersion Include="Annium.Data.Operations.Serialization.Json" Version="1.1.5" />
+    <PackageVersion Include="Annium.Extensions.Jobs" Version="1.1.5" />
+    <PackageVersion Include="Annium.Extensions.Validation" Version="1.1.5" />
+    <PackageVersion Include="Annium.Localization.InMemory" Version="1.1.5" />
+    <PackageVersion Include="Annium.Logging.Console" Version="1.1.5" />
+    <PackageVersion Include="Annium.Logging.Microsoft" Version="1.1.5" />
+    <PackageVersion Include="Annium.Net.Base" Version="1.1.5" />
+    <PackageVersion Include="Annium.Net.Http" Version="1.1.5" />
+    <PackageVersion Include="Annium.NodaTime.Serialization.Json" Version="1.1.5" />
+    <PackageVersion Include="Annium.Serialization.Abstractions" Version="1.1.5" />
+    <PackageVersion Include="Annium.Serialization.Json" Version="1.1.5" />
+    <PackageVersion Include="Annium.Testing" Version="1.1.5" />
     <PackageVersion Include="AntDesign" Version="1.4.0" />
     <PackageVersion Include="coverlet.collector" Version="6.0.4" />
     <PackageVersion Include="MatBlazor" Version="2.10.0" />
@@ -35,7 +35,7 @@
     <PackageVersion Include="Microsoft.TypeScript.MSBuild" Version="5.8.3" />
     <PackageVersion Include="OneOf" Version="3.0.271" />
     <PackageVersion Include="System.Reactive" Version="6.0.1" />
-    <PackageVersion Include="xunit" Version="2.9.3" />
+    <PackageVersion Include="xunit.v3" Version="2.0.2" />
     <PackageVersion Include="xunit.runner.visualstudio" Version="3.1.0" />
   </ItemGroup>
 </Project>
