--- a/web/test/Annium.Blazor.Charts.Tests/Annium.Blazor.Charts.Tests.csproj
+++ b/web/test/Annium.Blazor.Charts.Tests/Annium.Blazor.Charts.Tests.csproj
@@ -13,7 +13,7 @@
     <PackageReference Include="Annium.Testing" />
     <PackageReference Include="coverlet.collector" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
-    <PackageReference Include="xunit" />
     <PackageReference Include="xunit.runner.visualstudio" />
+    <PackageReference Include="xunit.v3" />
   </ItemGroup>
 </Project>
