--- a/web/test/Annium.Blazor.Routing.Tests/Annium.Blazor.Routing.Tests.csproj
+++ b/web/test/Annium.Blazor.Routing.Tests/Annium.Blazor.Routing.Tests.csproj
@@ -14,7 +14,7 @@
     <PackageReference Include="coverlet.collector" />
     <PackageReference Include="Microsoft.AspNetCore.Components" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
-    <PackageReference Include="xunit" />
     <PackageReference Include="xunit.runner.visualstudio" />
+    <PackageReference Include="xunit.v3" />
   </ItemGroup>
 </Project>
