--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -85,6 +85,6 @@ jobs:
         run: |
           git config user.name "it"
           git config user.email "it@annium.com"
-          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@$github.com/${{ github.repository }}.git
+          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git
           git tag v${{ steps.get_version.outputs.new_version }}
           git push origin v${{ steps.get_version.outputs.new_version }}
