--- a/.github/workflows/merge-request.yml
+++ b/.github/workflows/merge-request.yml
@@ -33,6 +33,11 @@ jobs:
         with:
           dotnet-version: '9.0.x'
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22.x'
+
       - name: Setup
         run: make setup
 
