--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,6 +37,11 @@ jobs:
         with:
           dotnet-version: '9.0.x'
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22.x'
+
       - name: Setup
         run: make setup
 
@@ -85,6 +90,6 @@ jobs:
         run: |
           git config user.name "it"
           git config user.email "it@annium.com"
-          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@$github.com/${{ github.repository }}.git
+          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git
           git tag v${{ steps.get_version.outputs.new_version }}
           git push origin v${{ steps.get_version.outputs.new_version }}
