--- a/web/demo/Demo.Blazor.Interop/Demo.Blazor.Interop.csproj
+++ b/web/demo/Demo.Blazor.Interop/Demo.Blazor.Interop.csproj
@@ -18,11 +18,6 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" />
   </ItemGroup>
   <ItemGroup>
-    <AdditionalFiles Include="Pages\Canvas\Page.razor" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Components\Navigation\Navigation.razor.cs">
-      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
-    </Content>
+    <AdditionalFiles Include="Pages\Dashboard\Page.razor" />
   </ItemGroup>
 </Project>
